AOC2024 day five refactor